--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="header" id="header">
         <div class="container">
             <nav>
-                <a href="#header"><img src="/portfolio/images/logo.png" class="logo"></a>
+                <a href="#header"><img src="https://github.com/HaneenPM/myportfolio/blob/main/logo.png" class="logo"></a>
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="/portfolio/images/IMG_7045.PNG">
+                    <img src="https://github.com/HaneenPM/myportfolio/blob/main/IMG_7045.PNG">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -102,7 +102,7 @@
             <h1 class="sub-title1">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="/portfolio/images/web-design-internet-website-responsive-software-concept.png">
+                    <img src="https://github.com/HaneenPM/myportfolio/blob/main/web-design-internet-website-responsive-software-concept.png">
                     <div class="layer">
                         <h3>Web Development</h3>
                         <p>
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="/portfolio/images/website-development.png">
+                    <img src="https://github.com/HaneenPM/myportfolio/blob/main/website-development.png">
                     <div class="layer">
                         <h3>UI/UX</h3>
                         <p>
@@ -140,7 +140,7 @@
                         <a href="http://linkedin.com/in/mohammed-haneen-p-m-15b098248"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://twitter.com/haneenskrillet?s=21&t=fykBV6t4O9qQclw_swQVfw"><i class="fa-brands fa-twitter"></i></a>
                     </div>
-                    <a href="/portfolio/images/Mohammed Haneen P M resume.pdf" download class="btn">Download CV</a>
+                    <a href="https://github.com/HaneenPM/myportfolio/blob/main/Mohammed%20Haneen%20P%20M%20resume.pdf" download class="btn">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form>
