--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="header" id="header">
         <div class="container">
             <nav>
-                <a href="https://github.com/HaneenPM/myportfolio/blob/main/logo.png"><img src="https://github.com/HaneenPM/myportfolio/blob/main/logo.png" class="logo"></a>
+                <a href="#header"><img src="https://github.com/HaneenPM/myportfolio/blob/main/logo.png" class="logo"></a>
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
