--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    
 </head>
 <body>
-    <div class="header" id="header">
+    <div class="header" id="header"><style>background-image: url('IMG_7063.PNG');</style>
         <div class="container">
             <nav>
                 <a href="#header"><img src="logo.png" class="logo"></a>
