--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><img src="logo.png" class="logo">Mohammed Haneen P M</title>
+    <title img src="logo.png" class="logo">Mohammed Haneen P M</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/252df4dc6d.js" crossorigin="anonymous"></script>
    
