--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </ul>
             </nav>
             <div class="header-text">
-                <p>WEB DEVELOPER | DESIGNER | GUITARIST</p>
+                <p>WEB DEVELOPER | UI/UX DESIGNER | GRAPHIC DESIGNER</p>
                 <h1>Hi, I'm Mohammed <span>Haneen</span><br></h1>
             </div>
         </div>
